--- a/gb/20/10/3/n12449824.md
+++ b/gb/20/10/3/n12449824.md
@@ -1,61 +1,67 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bafyob305/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bafyob305/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bafyob305/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bafyob305/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bafyob305/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bafyob305/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bafyob305/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bafyob305/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bafyob305/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bafyob305/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bafyob305/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bafyob305/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bafyob305/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bafyob305/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bafyob305/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bafyob305/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bafyob305/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bafyob305/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bafyob305/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bafyob305/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bafyob305/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bafyob305/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bafyob305/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bafyob305/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>徐若瑄登金曲星光神秘美丽 Ella时尚高雅</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>金曲星光 徐若瑄气质抢镜 Ella时尚高雅</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030746211487-600x400.jpg" />
 <h6>第31届金曲奖于10月3日在台北流行音乐中心登场，图为嘉宾徐若瑄（左）与Ella。（中央社／大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2020年10月03日讯】（大纪元记者郑宜芬台湾台北报导）“金钟55”才刚过，紧接着第31届<ahref="https://github.com/bafyob305/djy/blob/master/gb/tag/%E9%87%91%E6%9B%B2%E5%A5%96.md#1">金曲奖</a>于10月3日在台北流行音乐中心登场，嘉宾包括<ahref="https://github.com/bafyob305/djy/blob/master/gb/tag/%E5%BE%90%E8%8B%A5%E7%91%84.md#1">徐若瑄</a>、Ella、梁静茹，即使升格母亲，依然绽放女性不同风格的美丽姿态。</p>
-<p>横跨影视歌三栖的<ahref="https://github.com/bafyob305/djy/blob/master/gb/tag/%E5%BE%90%E8%8B%A5%E7%91%84.md#1">徐若瑄</a>，穿着紫色抓皱礼服，流露女性的坚毅且神秘美丽；Ella不同平日活泼个性，以服贴长发衬托黑色简约连身裤装，相当时尚高雅；梁静茹以浪漫浓郁的花卉印花礼服，呼应情歌天后的身份。</p>
-<figure id="attachment_12449828" style="width: 451px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/2010030740021487.jpg"><img class=" wp-image-12449828" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030740021487.jpg" alt="" width="451" b="669" /></a><figcaption class="wp-caption-text">横跨影视歌三栖的徐若瑄，穿着紫色抓皱礼服，流露女性的坚毅且神秘美丽。（中央社）</figcaption></figure>
-<figure id="attachment_12449830" style="width: 451px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/2010030740051487.jpg"><img class=" wp-image-12449830" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030740051487.jpg" alt="" width="451" b="657" /></a><figcaption class="wp-caption-text">Ella不同平日活泼个性，以服贴长发衬托黑色简约连身裤装，相当时尚高雅。（中央社）</figcaption></figure>
-<p>准歌后则各个走个性派，金曲歌后<ahref="https://github.com/bafyob305/djy/blob/master/gb/tag/%E6%9D%A8%E4%B9%83%E6%96%87.md#1">杨乃文</a>以超短发与深邃酒红色西装，搭配价值近4千万的顶级珠宝，华丽帅气中流露女爵魅力；魏如萱穿着星座系列的订制裤装，以白色象征天秤座意涵；才女王若琳（Joanna）以一袭深蓝色花瓣蓬裙礼服，营造豪华高贵的气场。</p>
-<figure id="attachment_12449832" style="width: 453px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/2010030740081487.jpg"><img class=" wp-image-12449832" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030740081487.jpg" alt="" width="453" b="625" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/bafyob305/djy/blob/master/gb/tag/%E6%9D%A8%E4%B9%83%E6%96%87.md#1">杨乃文</a>以超短发与深邃酒红色西装现身红毯，搭配价值近4000万的顶级珠宝，优雅与率性并济，帅气中流露出一丝神秘女爵魅力。（中央社）</figcaption></figure>
-<figure id="attachment_12449833" style="width: 453px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/2010030740151487.jpg"><img class=" wp-image-12449833" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030740151487.jpg" alt="" width="453" b="629" /></a><figcaption class="wp-caption-text">魏如萱穿着Gucci DIY星座系列的订制裤装，以白色象征天秤座意涵，并搭配价值500万的顶级珠宝。（中央社）</figcaption></figure>
+	<p>【大纪元2020年10月03日讯】（大纪元记者郑宜芬台湾台北报导）“金钟55”才刚过，紧接着第31届<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%87%91%E6%9B%B2%E5%A5%96.md#1">金曲奖</a>于10月3日在台北流行音乐中心登场，嘉宾包括<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BE%90%E8%8B%A5%E7%91%84.md#1">徐若瑄</a>、Ella、梁静茹，即使升格母亲，依然绽放女性不同风格的美丽姿态。</p>
+<p>横跨影视歌三栖的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BE%90%E8%8B%A5%E7%91%84.md#1">徐若瑄</a>，穿着紫色抓皱礼服，流露女性的坚毅且神秘美丽；Ella不同平日活泼个性，以服贴长发衬托黑色简约连身裤装，相当时尚高雅；梁静茹以浪漫浓郁的花卉印花礼服，呼应情歌天后的身份。</p>
+<figure id="attachment_12449828" aria-describedby="caption-attachment-12449828" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/2010030740021487.jpg"><img class=" wp-image-12449828" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030740021487.jpg" alt="" width="451" b="669" /></a><figcaption id="caption-attachment-12449828" class="wp-caption-text">横跨影视歌三栖的徐若瑄，穿着紫色抓皱礼服，流露女性的坚毅且神秘美丽。（中央社）</figcaption></figure>
+<figure id="attachment_12450405" aria-describedby="caption-attachment-12450405" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/2010031048501487.jpg"><img class="size-large wp-image-12450405" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010031048501487.jpg" alt="" width="450" b="600" /></a><figcaption id="caption-attachment-12450405" class="wp-caption-text">Ella不同平日活泼个性，以服贴长发衬托黑色简约连身裤装，时尚高雅。（许基东／大纪元）</figcaption></figure>
+<figure id="attachment_12450416" aria-describedby="caption-attachment-12450416" style="width: 455px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/201003091356100613.jpg"><img class=" wp-image-12450416" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/201003091356100613.jpg" alt="" width="455" b="683" /></a><figcaption id="caption-attachment-12450416" class="wp-caption-text">梁静茹以浪漫浓郁的花卉印花礼服，呼应情歌天后的身份。（许基东／大纪元）</figcaption></figure>
+<p>准歌后则各个走个性派，金曲歌后<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E4%B9%83%E6%96%87.md#1">杨乃文</a>以超短发与深邃酒红色西装，搭配价值近4千万的顶级珠宝，华丽帅气中流露女爵魅力；魏如萱穿着星座系列的订制裤装，以白色象征天秤座意涵；才女王若琳（Joanna）以一袭深蓝色花瓣蓬裙礼服，营造豪华高贵的气场。</p>
+<figure id="attachment_12449832" aria-describedby="caption-attachment-12449832" style="width: 453px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/2010030740081487.jpg"><img class=" wp-image-12449832" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030740081487.jpg" alt="" width="453" b="625" /></a><figcaption id="caption-attachment-12449832" class="wp-caption-text"><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E4%B9%83%E6%96%87.md#1">杨乃文</a>以超短发与深邃酒红色西装现身红毯，搭配价值近4000万的顶级珠宝，优雅与率性并济，帅气中流露出一丝神秘女爵魅力。（中央社）</figcaption></figure>
+<figure id="attachment_12449833" aria-describedby="caption-attachment-12449833" style="width: 453px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/2010030740151487.jpg"><img class=" wp-image-12449833" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030740151487.jpg" alt="" width="453" b="629" /></a><figcaption id="caption-attachment-12449833" class="wp-caption-text">魏如萱穿着Gucci DIY星座系列的订制裤装，以白色象征天秤座意涵，并搭配价值500万的顶级珠宝。（中央社）</figcaption></figure>
+<figure id="attachment_12449843" aria-describedby="caption-attachment-12449843" style="width: 456px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/2010030811401487.jpg"><img class=" wp-image-12449843" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030811401487.jpg" alt="" width="456" b="684" /></a><figcaption id="caption-attachment-12449843" class="wp-caption-text">才女王若琳（Joanna）以一袭深蓝色花瓣蓬裙礼服，营造豪华高贵的氛围。（中央社）</figcaption></figure>
 <p>星光大道同时也是新“声”代男星帅气竞技场，J.Sheon穿上水泥基调城市迷彩印花的硬挺双排扣西装，展现“行走发电机”的帅度；人气新星高尔轩以白色西装营造清爽帅劲；去年金曲新人?ZI今年担任表演嘉宾，穿着黑色皮衣展现自我型格。</p>
+<figure id="attachment_12450426" aria-describedby="caption-attachment-12450426" style="width: 454px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/201003091135100613.jpg"><img class=" wp-image-12450426" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/201003091135100613.jpg" alt="" width="454" b="681" /></a><figcaption id="caption-attachment-12450426" class="wp-caption-text">J.Sheon穿上水泥基调城市迷彩印花的硬挺双排扣西装出席星光红毯。（许基东／大纪元）</figcaption></figure>
+<figure id="attachment_12450437" aria-describedby="caption-attachment-12450437" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/201003092028100613.jpg"><img class=" wp-image-12450437" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/201003092028100613.jpg" alt="" width="451" b="677" /></a><figcaption id="caption-attachment-12450437" class="wp-caption-text">高尔轩身穿白色西装。（许基东／大纪元）</figcaption></figure>
+<figure id="attachment_12449862" aria-describedby="caption-attachment-12449862" style="width: 452px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/2010030739461487.jpg"><img class=" wp-image-12449862" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030739461487.jpg" alt="" width="452" b="691" /></a><figcaption id="caption-attachment-12449862" class="wp-caption-text">金曲新人?ZI今年担任表演嘉宾，穿着黑色皮衣展现自我型格。（中央社）</figcaption></figure>
+<figure id="attachment_12449871" aria-describedby="caption-attachment-12449871" style="width: 457px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/2010030743091487.jpg"><img class=" wp-image-12449871" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030743091487.jpg" alt="" width="457" b="686" /></a><figcaption id="caption-attachment-12449871" class="wp-caption-text">星光大道主持人玛丽穿上粉裸色亮片蕾丝礼服，搭配松软低盘发，流露浪漫唯美的氛围。（中央社）</figcaption></figure>
+<figure id="attachment_12449886" aria-describedby="caption-attachment-12449886" style="width: 456px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/2010030740261487.jpg"><img class=" wp-image-12449886" title="" src="https://i.epochtimes.com/assets/uploads/2020/10/2010030740261487.jpg" alt="" width="456" b="627" /></a><figcaption id="caption-attachment-12449886" class="wp-caption-text">本届入围大黑马阿爆，以抢眼羽毛耳环与深红颈饰衬托黑色垫肩礼服，携手父母一起走红毯。（中央社）</figcaption></figure>
 <p>责任编辑：梁梦竹</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bafyob305/djy/blob/master/gb/18/2/28/n10178409.md#1">2岁儿要独自睡 徐若瑄感慨：这一天太早来临</a></li>
-<li><a href="https://github.com/bafyob305/djy/blob/master/gb/18/5/21/n10413404.md#1">面对负面报导 徐若瑄这样铨释幸福</a></li>
-<li><a href="https://github.com/bafyob305/djy/blob/master/gb/19/6/25/n11344497.md#1">为许书豪跨刀新歌 徐若瑄靠通讯软体煲友谊</a></li>
-<li><a href="https://github.com/bafyob305/djy/blob/master/gb/20/1/22/n11813246.md#1">《孤味》曝预告 谢盈萱徐若瑄等金奖演员同台</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/2/28/n10178409.md#1">2岁儿要独自睡 徐若瑄感慨：这一天太早来临</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/21/n10413404.md#1">面对负面报导 徐若瑄这样铨释幸福</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/25/n11344497.md#1">为许书豪跨刀新歌 徐若瑄靠通讯软体煲友谊</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/22/n11813246.md#1">《孤味》曝预告 谢盈萱徐若瑄等金奖演员同台</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/11/n10382929.md#1" target="_blank">共产暴政录：公私合营（工商改造）</a></li><li><a href="https://github.com/bafyob305/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/31/n10103847.md#1" target="_blank">老伴绝处逢生 八旬警察举杯感恩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/15/n9959503.md#1" target="_blank">佚名：这个“英雄”诞生记让人不寒而栗……</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12441804.md#1">曾目击UFO 美前飞行员：政府或有外星科技</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/7/30/n12294991.md#1">【成吉思汗】降生草原 绝境中成长</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/26/n12433270.md#1">张爱玲的上海</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/2/1/5/n161846.md#1">梦溪笔谈中的神秘现象（上）</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/22/n12423035.md#1">唐朝皇子救罪龙 龙神涌泉报恩</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12446340.md#1">【十字路口】五路加速 习将成中共亡党领导人</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/2/n12446937.md#1">【纽约调查】华人进步会被爆 资助黑命贵运动</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/26/n12433127.md#1">【罗厨寻味】南瓜红烧肉</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12444550.md#1">美众院中国工作组新报告 指中共为世代之敌</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12443917.md#1">【拍案惊奇】拜登辩论作弊？蓬佩奥会访台吗</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12444668.md#1">腾讯给一万员工送华为手机 网民炸锅</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12445814.md#1">摆脱小章子怡标签 童瑶出道18年一夜爆红</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12442828.md#1">章子怡首晒儿子正面照 一家五口温馨出镜</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/29/n12440388.md#1">吴秀波抛售美国豪宅 亏本甩卖仍无人问津</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12443068.md#1">教女儿弹琴上演四手联弹 周杰伦打趣称学费贵</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/2/n12447747.md#1">澎恰恰破产苦还1.2亿债 突发文“快撑不住”</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12441804.md#1">曾目击UFO 美前飞行员：政府或有外星科技</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12444598.md#1">外星人来访？疫情下美国UFO目击事件增一半</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12444217.md#1">介绍台湾“共匪饼” 香港亲共媒体被称造反</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/29/n12439558.md#1">中秋吃月饼烤肉 必备4种饮料 排毒又降血脂</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12443080.md#1">【本周直播】乳房有硬块是癌症？名医教你抗乳癌</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bafyob305/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bafyob305/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/3/n12449824.htm">徐若瑄登金曲星光神秘美丽 Ella时尚高雅</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/3/n12449824.htm">金曲星光 徐若瑄气质抢镜 Ella时尚高雅</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bafyob305/djy/blob/master/gb/20/10/3/n12449824.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bafyob305/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bafyob305/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bafyob305/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bafyob305/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bafyob305/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/3/n12449824.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
